<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.AboutActivity">

    <include layout="@layout/toolbar_default" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_section_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_section_about"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_regular" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/about_section_about_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_section_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_section_about"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_section_licenses"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_regular" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_section_licenses_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>