<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.NowPlayingActivity">

    <ScrollView
        android:id="@+id/scroll_view_now_playing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/padding_regular"
            android:paddingRight="@dimen/padding_regular">

            <TextView
                android:id="@+id/text_view_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/arcanos_web_rock"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/text_view_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_song"
                android:gravity="center"
                android:text="@string/now_playing_artist_placeholder"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/text_view_lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_artist"
                android:layout_marginTop="@dimen/margin_regular"
                android:gravity="center"
                android:text="@string/now_playing_lyrics_placeholder"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_small" />
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/layout_header_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_album_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:background="@color/colorBlack"
            android:gravity="bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/arcanos" />

        <ImageView
            android:id="@+id/image_view_album_art_blur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:alpha="0"
            android:background="@color/colorBlack"
            android:gravity="bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/arcanos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_album_art_mini"
                android:layout_width="@dimen/mini_album_art_size"
                android:layout_height="@dimen/mini_album_art_size"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:alpha="0"
                android:background="@color/colorBlack"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/layout_header_metadata"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mini_album_art_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:alpha="0"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_song_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:shadowColor="@color/textHighContrastStroke"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/arcanos_web_rock"
                    android:textColor="@color/textPrimaryHighContrast"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:id="@+id/text_view_artist_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/textHighContrastStroke"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/now_playing_artist_placeholder"
                    android:textColor="@color/textSecondaryHighContrast"
                    android:textSize="@dimen/text_size_regular" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/selector_media_controls">

        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="@dimen/clickable_area"
            android:layout_height="@dimen/clickable_area"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/now_playing_action_share"
            android:src="@drawable/ic_share_white_24dp"
            android:text="@string/now_playing_action_share"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/button_open_in_browser"
            android:layout_width="@dimen/clickable_area"
            android:layout_height="@dimen/clickable_area"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_share"
            android:layout_toRightOf="@+id/button_share"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/now_playing_action_open_in_browser"
            android:src="@drawable/ic_open_in_browser_white_24dp"
            android:text="@string/now_playing_action_open_in_browser"
            android:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/button_cast"
            android:layout_width="@dimen/clickable_area"
            android:layout_height="@dimen/clickable_area"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_open_in_browser"
            android:layout_toRightOf="@+id/button_open_in_browser"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/now_playing_action_cast"
            android:src="@drawable/ic_cast_white_24dp"
            android:text="@string/now_playing_action_cast"
            android:tint="@color/colorAccent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/button_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_cast"
            android:layout_toLeftOf="@+id/button_settings"
            android:layout_toRightOf="@+id/button_cast"
            android:layout_toStartOf="@+id/button_settings"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/now_playing_volume"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small" />

            <SeekBar
                android:id="@+id/seek_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="@dimen/clickable_area"
            android:layout_height="@dimen/clickable_area"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/now_playing_menu_settings"
            android:src="@drawable/ic_settings_white_24dp"
            android:text="@string/now_playing_menu_settings"
            android:tint="@color/colorAccent" />
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_hourglass_empty_white_36dp"
        app:layout_anchor="@id/image_view_album_art"
        app:layout_anchorGravity="bottom|right|end"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccent"
        fab:layout_behavior=".views.extensions.ClansFloatingActionBehavior" />

</android.support.design.widget.CoordinatorLayout>
